--- a/src/assets/style/stylesheet.css
+++ b/src/assets/style/stylesheet.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&family=Nunito&display=swap');
 
 body, html {
     font-family: 'Nunito', sans-serif;
@@ -8,3 +8,109 @@ body, html {
     margin: 0;
 }
 
+a:link, a:hover, a:active {
+    text-decoration: none;
+}
+
+.input-wrapper {
+    position: relative;
+}
+
+.input-wrapper > input {
+    border: 1px solid white;
+    border-radius: 6px;
+    position: relative;
+    width: 300px;
+    margin: 10px;
+    line-height: 6ex;
+    background-color: transparent;
+    outline: none;
+    color: white;
+    padding-left: 15px;
+    font-size: 16px;
+    font-family: 'Nunito', sans-serif;
+}
+
+.input-wrapper > label {
+    position: absolute;
+    top: 0.2ex;
+    z-index: 1;
+    left: 2em;
+    padding: 0 5px;
+    background-color: #FF7408;
+}
+
+
+/* The checkbox-container */
+.checkbox-container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    line-height: 28px;
+    cursor: pointer;
+    font-size: 14px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox-container input:checked ~ .checkmark {
+    background-color: transparent;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox-container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox-container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+button {
+    padding: 10px 25px;
+    background-color: transparent;
+    border-radius: 10px;
+    border: 2px solid white;
+    color: white;
+    cursor: pointer;
+}
